--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   percent_indicator: ^4.2.2
   flutter_map: ^5.0.0
   latlong2: 0.9.1
+  smooth_page_indicator: ^1.1.0
 
 
 dev_dependencies:
