--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,8 @@ dependencies:
   percent_indicator: ^4.2.2
   flutter_map: ^5.0.0
   latlong2: 0.9.1
-  smooth_page_indicator: ^1.1.0
+  smooth_page_indicator: ^1.1.0 # Use the latest version
+  flutter_svg: ^2.0.0
 
 
 dev_dependencies:
@@ -95,7 +96,7 @@ flutter:
     - assets/images/vector.jpg
     - assets/images/otp-security.png
     - assets/images/forgot_password.png
-    
+    - assets/images/notifications.svg
   
 
 
