--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,9 @@ dependencies:
   media_kit: ^1.1.11
   media_kit_video: ^1.2.5
   media_kit_libs_video: ^1.0.5
+  video_player: ^2.8.2
+  flutter_local_notifications: ^18.0.1
+
 
 
 dev_dependencies:
