--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,4 +1,3 @@
-// 2️⃣ Buildscript must come next
 buildscript {
     ext.kotlin_version = '1.8.22' // Update if necessary
     repositories {
@@ -11,13 +10,15 @@ buildscript {
     }
 }
 
-
 // 1️⃣ Plugins must be at the top
 plugins {
     id "com.android.application"
     id "kotlin-android"
     id "dev.flutter.flutter-gradle-plugin"
 }
+
+// 2️⃣ Buildscript for Gradle settings
+
 
 // 3️⃣ Android settings
 android {
@@ -28,6 +29,7 @@ android {
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_17
         targetCompatibility JavaVersion.VERSION_17
+        coreLibraryDesugaringEnabled true
     }
 
     kotlinOptions {
@@ -49,7 +51,13 @@ android {
     }
 }
 
-// 4️⃣ Flutter settings
+// 4️⃣ Dependencies
+dependencies {
+    implementation "androidx.core:core-ktx:1.12.0"
+    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.0.3'
+}
+
+// 5️⃣ Flutter settings
 flutter {
     source = "../.."
 }
